--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 // Apply the java plugin to add support for Java
-apply plugin: 'java'
+apply plugin: 'war'
 
 // use Java 1.8
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -14,6 +14,9 @@ repositories {
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
+    // Java EE 7 API
+    compile 'javax:javaee-api:7.0'
+
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
 
